# ccwss-barn-2025

./: CMakeLists.txt  README.md  Singularity.def
jackal/jackal_control/config/: robot_localization.yaml
jackal/jackal_control/launch/: control.launch
jackal/jackal_description/urdf/: jackal.gazebo
local_map/include/: ellipse.hpp
local_map/launch/: for_simulation.launch
local_map/src/: local_map_pub.cpp
msgs/astar_msgs/: CMakeLists.txt  package.xml
msgs/astar_msgs/msg/: AStarPathArray.msg
msgs/initial_optimized_msgs/: CMakeLists.txt  package.xml
msgs/initial_optimized_msgs/msg/: InitialOptimizedTrajectory.msg
navigation/: CMakeLists.txt  package.xml
navigation/config/: config.yaml
navigation/include/: A_Star_Planning_Node.hpp  DenseGridMap.hpp  First_Optimization_Node.hpp  Mapping.hpp  Matrix.hpp  TFSubscriberNode.hpp
navigation/launch/: odom.launch  treajectory_planning.launch
navigation/src/: A_Star_Planning_Node.cpp  DenseGridMap.cpp  First_Optimization_Node.cpp  Mapping.cpp  Matrix.cpp  TFSubscriberNode.cpp  main.cpp  odom_tf_broadcaster.py
obs_param/src/: obs_kf.cpp
rviz/: show.rviz
the-barn-challenge/: Singularityfile.def  out.txt  report_test.py  run.py  test.sh
the-barn-challenge/jackal_helper/configs/params/: base_local_planner_params.yaml  costmap_common_params.yaml  global_planner_params.yaml  move_base_params.yaml
the-barn-challenge/jackal_helper/launch/: config_file.rviz  jinyu_config.rviz  move_base_jinyu.launch  move_base_jinyutest.launch  move_base_mlda.launch  move_base_mlda_rviz.launch
the-barn-challenge/jackal_helper/worlds/DynaBARN/: world_0.world
the-barn-challenge/mlda_algo/python/: astar_replanner.py  controller.py  inspection.py  local_planner.py  mpc_algo_right_left.py  mpc_node.py
tracking/: CMakeLists.txt  package.xml
tracking/config/: config copy.yaml  config.yaml
tracking/include/: MPC.hpp  MSG_Process.hpp  Pure_Pursuit.hpp
tracking/launch/: treajectory_tracking.launch
tracking/src/: MPC copy.cpp  MPC.cpp  MSG_Process.cpp  Pure_Pursuit.cpp  main.cpp
