<?xml version="1.0"?>
<package format="2">
  <name>trajectory_planning</name>
  <version>0.1.0</version>
  <description>Custom trajectory_planning package for Jackal robot</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>astar_msgs</depend>
  <depend>tf</depend>
  <depend>message_filters</depend>
  <depend>yaml-cpp</depend>
  <depend>rospy</depend>

  
  <export>
  </export>
</package>