<?xml version="1.0"?>
<package format="2">
  <name>trajectory_tracking</name>
  <version>0.1.0</version>
  <description>Custom trajectory_tracking package for Jackal robot</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>message_filters</depend>
  <depend>yaml-cpp</depend>
  <build_depend>opencv4</build_depend>
  <exec_depend>opencv4</exec_depend>
  <depend>astar_msgs</depend>

  
  <build_depend>libopencv-dev</build_depend>
  <exec_depend>libopencv-dev</exec_depend>
  
  <export>
  </export>
</package>